fixed title horizontal alignment error

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,7 +25,6 @@ p{
 #selectActBtn{
     margin-top: 5px;
     clear: both;
-	width: 500px;
 }
 
 #notif{
